tests/fail/elaboration/string-literal/underflowing.fathom
//~ exit-code = 1

"oops" : U64
